lib/tests/fixtures/compiler/parser/func_bad_capture.baseline
Error: func_bad_capture.pp:1:16: parameter $x is a capture parameter but is not the last parameter.
  function test(*$x, $y)
                 ^~
