lib/tests/fixtures/compiler/parser/func_bad_capture.pp
function test(*$x, $y)
{

}

test(foo, bar)
